fix armor render crush and added ru translation